--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2005-02-27  Maciej Katafiasz  <mathrick@freedesktop.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* configure.ac:
+	* po/af.po:
+	* po/az.po:
+	* po/ca.po:
+	* po/cs.po:
+	* po/de.po:
+	* po/en_GB.po:
+	* po/fr.po:
+	* po/it.po:
+	* po/nb.po:
+	* po/nl.po:
+	* po/ru.po:
+	* po/sq.po:
+	* po/sr.po:
+	* po/sv.po:
+	* po/tr.po:
+	* po/uk.po:
+	* po/vi.po:
+
 2005-02-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/gstinfo.c:
