--- a/ChangeLog
+++ b/ChangeLog
@@ -1,25 +1,9 @@
-2005-02-27  Maciej Katafiasz  <mathrick@freedesktop.org>
+2005-02-27  Phil Blundell  <pb@nexus.co.uk>
 
-	reviewed by: <delete if not using a buddy>
+	Reviewed by:  Maciej Katafiasz  <mathrick@freedesktop.org>
 
 	* configure.ac:
-	* po/af.po:
-	* po/az.po:
-	* po/ca.po:
-	* po/cs.po:
-	* po/de.po:
-	* po/en_GB.po:
-	* po/fr.po:
-	* po/it.po:
-	* po/nb.po:
-	* po/nl.po:
-	* po/ru.po:
-	* po/sq.po:
-	* po/sr.po:
-	* po/sv.po:
-	* po/tr.po:
-	* po/uk.po:
-	* po/vi.po:
+	  Add -lm since we depend on functions in libm (#168645).
 
 2005-02-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
