--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2005-03-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/registries/Makefile.am:
+	* gst/registries/gstlibxmlregistry.c: (gst_xml_registry_get_type),
+	(gst_xml_registry_class_init), (gst_xml_registry_init),
+	(gst_xml_registry_new), (gst_xml_registry_set_property),
+	(gst_xml_registry_get_property), (get_time), (make_dir),
+	(gst_xml_registry_get_perms_func),
+	(plugin_times_older_than_recurse), (plugin_times_older_than),
+	(gst_xml_registry_open_func), (gst_xml_registry_load_func),
+	(gst_xml_registry_save_func), (gst_xml_registry_close_func),
+	(add_to_char_array), (read_string), (read_uint), (read_enum),
+	(load_pad_template), (load_feature), (load_plugin), (load_paths),
+	(gst_xml_registry_load), (gst_xml_registry_load_plugin),
+	(gst_xml_registry_save_caps), (gst_xml_registry_save_pad_template),
+	(gst_xml_registry_save_feature), (gst_xml_registry_save_plugin),
+	(gst_xml_registry_save), (gst_xml_registry_rebuild_recurse),
+	(gst_xml_registry_rebuild):
+	* gst/registries/gstlibxmlregistry.h:
+	  Implement libxml2-based registry (allows for roughly 2x as fast
+	  startup), mostly based on earlier code from Benjamin Otte.
+
 2005-03-04  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* gst/elements/gstfilesrc.c: (gst_filesrc_get):
