--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-10  Jan Schmidt,,,  <thaytan@mad.scientist.com>
+	* gst/registries/gstlibxmlregistry.c: (load_plugin), (load_paths):
+	  g_free allocated GstPlugins, since they're not GstObjects.
+
 2005-03-09  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* docs/gst/gstreamer-sections.txt:
