--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,31 @@
 2005-03-09  Wim Taymans  <wim@fluendo.com>
 
+	* gst/gstbin.c: (gst_bin_class_init), (gst_bin_set_index_func),
+	(gst_bin_set_clock_func), (gst_bin_get_clock_func),
+	(gst_bin_add_func), (gst_bin_add), (gst_bin_remove_func),
+	(gst_bin_remove), (gst_bin_iterate_recurse),
+	(gst_bin_iterate_sinks), (gst_bin_iterate_all_by_interface):
+	* gst/gstbin.h:
+	* gst/gstelement.c: (gst_element_get_state_func),
+	(gst_element_lost_state):
+	* gst/gstelement.h:
+	* gst/gstinfo.c: (_gst_debug_init):
+	* gst/gstiterator.c: (find_custom_fold_func):
+	* gst/gstpipeline.c: (gst_pipeline_init),
+	(gst_pipeline_auto_clock):
+	* gst/gstutils.h:
+	* testsuite/clock/clock2.c: (gst_clock_debug), (element_wait):
+	* testsuite/clock/clock3.c: (ok_callback), (error_callback),
+	(main):
+	Clean up gstelement.h
+	GstBin cleanups, fix bug where iterator was freed.
+	GstElement cleanups.
+	Backport gstinfo from HEAD.
+	Fix GstIterator comparison bug.
+	Fix clock tests.
+
+2005-03-09  Wim Taymans  <wim@fluendo.com>
+
 	* gst/gst_private.h:
 	* gst/gstbin.c: (gst_bin_get_by_name_recurse_up):
 	* gst/gstbuffer.h:
