--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+This is GStreamer FFmpeg 0.8.4
+
+Changes since 0.8.2:
+	Demuxers:
+	* fix I/O layer so almost all work now
+
+	Decoders:
+	* event handling
+	* timestamp smoothing
+	* MPEG/MP3 parsing added
+
+Bugs fixed since 0.8.2:
+
+	* 162905 : SEGV when using ffenc_msmpeg4
+	* 163340 : [PATCH] [ffdec_mjpeg] ffdec_mjpeg doesn't work anymore
+	* 163437 : [ffenc_*] Encoders segfault on exit
+	* 163467 : [ffdec_mpeg2video] causes 'lag'
+	* 165250 : Problem compiling gst-ffmpeg 0.8.3
+	* 165501 : ffmpeg flac decoder fails on testsuite flac
+
 This is GStreamer FFmpeg 0.8.3
 
 Changes since 0.8.2:
