--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* tools/gst-launch.1.in:
+	  Document --tags.
+
 2005-03-11  Stefan Kost  <ensonic@sonicpulse.de>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
